--- a/supabasefront/index.html
+++ b/supabasefront/index.html
@@ -15,6 +15,18 @@
     <input type="number" id="price" name="price" required step="0.01">
     <button type="submit">Add</button>
   </form>
+  
+  <form id="update-product-form" style="display: none;">
+      <h2>Atualizar Produto</h2>
+      <input type="hidden" id="update-id">
+      <label for="update-name">Nome:</label>
+      <input type="text" id="update-name" required>
+      <label for="update-price">Preço:</label>
+      <input type="number" id="update-price" required step="0.01">
+      <label for="update-description">Descrição:</label>
+      <input type="text" id="update-description" required>
+      <button type="submit">Atualizar</button>
+    </form>
 
   <ul id="products"></ul>
 
