--- a/supabasefront/index.html
+++ b/supabasefront/index.html
@@ -5,18 +5,20 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>Product CRUD</h1>
+  <h1>Produtos</h1>
+  <div class="main">
+    <form id="add-product-form">
+      <h2>Adicionar produtos</h2>
+      <label for="name">Nome:</label>
+      <input type="text" id="name" name="name" required>
+      <label for="price">Preço:</label>
+      <input type="number" id="price" name="price" required step="0.01">
+      <label for="description">Descrição:</label>
+      <input type="text" id="description" name="description" required>
+      <button type="submit">Adicionar</button>
+    </form>
 
-  <form id="add-product-form">
-    <h2>Add Product</h2>
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-    <label for="price">Price:</label>
-    <input type="number" id="price" name="price" required step="0.01">
-    <button type="submit">Add</button>
-  </form>
-  
-  <form id="update-product-form" style="display: none;">
+    <form id="update-product-form" style="display: none;">
       <h2>Atualizar Produto</h2>
       <input type="hidden" id="update-id">
       <label for="update-name">Nome:</label>
@@ -27,6 +29,9 @@
       <input type="text" id="update-description" required>
       <button type="submit">Atualizar</button>
     </form>
+    
+    
+  </div>
 
   <ul id="products"></ul>
 
